k3s/example/whoami/namespace-whoami.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    app.kubernetes.io/instance: whoami
    app.kubernetes.io/name: whoami
