k3s/example/whoami/myapp-svc-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: default
spec:
  selector:
    app: myapp
    release: canary
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31180
