k3s/example/whoami/ingress-whoami-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: whoami-ingress
#   namespace: whoami
#   annotations:
#     ingressclass.kubernetes.io/is-default-class: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: "/"
# spec:
#   rules:
#     - host: test123.com
#       http:
#         paths:
#           - path: /whoami
#             pathType: Prefix
#             backend:
#               service:
#                 name: whoami-service
#                 port:
#                   number: 80
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: whoami
spec:
 # ingressClassName: "nginx"
  rules:
  - host: test123.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-service
            port:
