k3s/example/whoami/whoami-https-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-app-https-route
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.test321.com`)
      kind: Rule
      services:
        - name: whoami-service
          port: 80
  tls: 
    secretName: whoami-app-tls
